src/test/deca/syntax/invalid/renduInter01/07while_missing_brace.deca
// Description:
//      Programme lexicalement incorrect
//      => une boucle while doit comporter des accolades "while (condition) { ... }"
//
// Resultats:
//      Erreur syntaxique
//      Ligne 12 : token 'x' inattendu => token '{' attendu

{
    int x = 4;
    while (x == 4) 
        x = 3;
	println("hello error");
    

}

